@@ -280,6 +280,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA i6100  (EXPERIMENTAL)
        Canon PIXMA i6500  (EXPERIMENTAL)
        Canon PIXMA i9100  (EXPERIMENTAL)
+       Canon PIXMA i9900  (EXPERIMENTAL)
        Canon PIXMA iP3600 (EXPERIMENTAL)
        Canon PIXMA iP3500 (EXPERIMENTAL)
        Canon PIXMA iP3300 (EXPERIMENTAL)
